# alpha-loop

./: .gitignore  LICENSE  README.md  pyproject.toml
alpha_loop/: __init__.py
alpha_loop/backtest/: run_backtest.py  strategy.py
alpha_loop/bot/: alpaca_client.py  features_live.py  inference.py
alpha_loop/features/: indicators.py  pipeline.py
alpha_loop/labels/: triple_barrier.py
alpha_loop/models/: optuna_search.py  train.py  walk_forward.py
alpha_loop/registry/: mlflow_utils.py  promotion.py
alpha_loop/utils/: logging.py  time_windows.py
notebooks/: 01_exploration.ipynb
scripts/: run_trading_bot.py  run_training_factory.py
tests/: test_backtest_strategy.py  test_live_features.py  test_triple_barrier.py  test_walk_forward.py
