[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "alpha-loop"
version = "0.1.0"
description = "End-to-end MLOps trading system with automated retraining, walk-forward validation, backtesting, and a live paper-trading bot."
readme = "README.md"
authors = [
    { name = "cnrhughes" }
]
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "pandas-ta",
    "xgboost",
    "optuna",
    "mlflow",
    "backtesting",
    "alpaca-trade-api",
    "scikit-learn",
    "pyyaml",
    "python-dotenv"
]


[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]
notebooks = [
    "jupyterlab",
    "ipykernel"
]


[tool.setuptools.packages.find]
where = ["."]


[tool.black]
line-length = 88
target-version = ["py310"]


[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"


[tool.pytest.ini_options]
testpaths = ["tests"]
